--- a/Swallab/foodNotes/demoHotpot.html
+++ b/Swallab/foodNotes/demoHotpot.html
@@ -30,49 +30,31 @@
         <div class="container">
             <!-- LOGO -->
             <a class="navbar-brand ms-5 col-1" href="http://localhost/swallabLa/swallab/public/headpage/headpage">
-                <img src="../images/root/logo.jpg" alt="" class="logo d-inline-block align-text-top">
+                <img src="../images/other/logo.jpg" alt=""
+                    class="logo d-inline-block align-text-top">
             </a>
             <!-- 伸縮 -->
             <div class="collapse navbar-collapse col-10" id="navbarSupportedContent">
                 <div class="nav ms-0 me-3 row">
                     <div class="nav-item col-6">
-                        <!-- 首頁沒有 active -->
-                        <!-- <a class="nav-link active" aria-current="page" href="#">Active</a> -->
-                        <a class="nav-link d-block nav_mainbtn" href="../restaurant/detail.html">找餐廳</a>
+                        <a id="rest" class="nav-link d-block nav_mainbtn"
+                            href="http://localhost/swallabLa/swallab/public/restaurant/detail">找餐廳</a>
                     </div>
                     <div class="nav-item col-6">
-                        <a class="nav-link d-block nav_mainbtn" href="../foodNotes/foodNotes.html">看食記</a>
+                        <a id="resta" class="nav-link d-block nav_mainbtn"
+                            href="http://localhost/swallab/Swallab/foodNotes/foodNotes.html">看食記</a>
                     </div>
                 </div>
                 <!-- Input 都在這 -->
                 <form class="ms-2 me-1 w-100" role="search" name="search">
                     <div class="d-flex" style="width: 100%;">
-                        <!-- hover、click 換 icon -> src="./img/blog.png" -->
-                        <div id="theicon" class="theicon mt-2 me-0 align-items-center justify-content-center">
-                            <div id="popup" class="popup text-center d-flex align-items-center justify-content-center">
-                                <p><i id="showicon" class=""></i></p>
-                            </div>
-                            <div id="popupBR" class="popupBR">
-                                <div id="popupBlog" class="col-4 text-center">
-                                    <p class="text-center"><i class="fa-solid fa-book-open"></i></p>
-                                </div>
-                                <div id="popupRest" class="col-4 text-center">
-                                    <p><i class="fa-solid fa-utensils"></i></p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        
-
+                        <div id="theicon" class="mt-2 me-0 align-items-center justify-content-center"></div>
                         <!-- 搜尋框 + 情境按鈕(pill 會改成底線) -->
                         <div class="d-block position-relative m-0 p-0 col">
-                            <!-- 搜尋框 start -->
-                            <!-- <input class="form-control m-0" type="search" placeholder="Click" aria-label="Search"> -->
-                            <div style="display: flex;" clas="row">
+                            <div style="display: flex;" class="row">
                                 <div class="col-6">
                                     <input type="text" id="myInput" onclick="myFunction()" placeholder="點擊我"
                                         class="form-control m-0">
-                                    <!-- from 資料庫 -->
                                     <div id="myDropdown" class="dropdown-content"
                                         style="display: none; position: absolute;">
                                         <a href="#cate_no" onclick="fillInput('null')"
@@ -88,10 +70,8 @@
                                     </div>
                                 </div>
                                 <div class="col-6">
-
                                     <input type="text" id="myInput2" onclick="myFunction2()" placeholder="點擊我"
-                                        class="form-control m-0 col-6">
-                                    <!-- from 資料庫 -->
+                                        class="form-control m-0">
                                     <div id="myDropdown2" class="dropdown-content"
                                         style="display: none; position: absolute;">
                                         <a href="#loc_no" onclick="fillInput2('null')"
@@ -104,41 +84,36 @@
                                 </div>
                             </div>
 
-
-
-                            <!-- 搜尋框 end -->
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 10%;">
-                                <img class="icon" src="../images/nav_icon/dating.png" alt="">約會
+                                <img class="icon" src="../images/other/dating.png" alt="">約會
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 30%;">
-                                <img class="icon" src="../images/nav_icon/group.png" alt="">聚餐
+                                <img class="icon" src="../images/other/group.png" alt="">聚餐
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 50%;">
-                                <img class="icon" src="../images/nav_icon/confetti.png" alt="">慶生
+                                <img class="icon" src="../images/other/confetti.png"
+                                    alt="">慶生
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 70%;">
-                                <img class="icon" src="../images/nav_icon/handshake.png" alt="">商務
+                                <img class="icon" src="../images/other/handshake.png"
+                                    alt="">商務
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 90%;">
-                                <img class="icon" src="../images/nav_icon/disabled-people.png" alt="">無障礙
+                                <img class="icon" src="../images/other/disabledpeople.png"
+                                    alt="">無障礙
                             </button>
                         </div>
-                        <!-- 搜尋 icon = submit -->
-                        <input type="image" src="../images/nav_icon/loupe.png" class="icon mt-2 ms-0"
+                        <input type="image" src="../images/other/loupe.png" class="icon mt-2 ms-0"
                             onclick="document.search.submit()">
-                        <!-- <img src="./img/loupe.png" class="icon mt-2 ms-1" alt="" type="submit"> -->
                     </div>
                 </form>
                 <!-- 登入及註冊按鈕 -->
                 <div class="ms-3 me-5 col-1" style="color:blue">
-                    <!-- <a href="#" class="">
-                        <button class="btn btn-sm btnLogin text-nowrap">登入/註冊</button>
-                    </a> -->
                     David
                 </div>
             </div>
@@ -175,9 +150,9 @@
             <!-- 右邊文章 -->
             <div class="col-9  p-3" >
                 <h3>【台中】青花驕麻辣鍋(崇德店)王品集團麻辣鍋、酸菜白肉鍋火鍋餐廳 牛三拼盛宴比臉大氣勢十足</h3>
-                <div class="mt-5" >發布時間：<span>2024-07-20</span></div>
+                <div class="mt-5" >發布時間：<span>2024-05-20 20:38</span></div>
                 <div class="d-flex justify-content-between align-items-center">
-                    <div>用餐時間：<span>2024-06-30</span></div>
+                    <div>用餐時間：<span>2024-04-30 12:30</span></div>
                     <!-- 下面這個<div>不可以刪掉 -->
                     <div>
                         <i class="fa-regular fa-heart noColorHeart"></i>
