--- a/Swallab/foodNotes/demoPiggy.html
+++ b/Swallab/foodNotes/demoPiggy.html
@@ -23,11 +23,11 @@
             <div class="collapse navbar-collapse col-10" id="navbarSupportedContent">
                 <div class="nav ms-0 me-3 row">
                     <div class="nav-item col-6">
-                        <a id="rest" class="nav-link d-block nav_mainbtn"
+                        <a id="rest" class="nav-link d-block nav_mainbtn" style="color:#8B4513;font-weight: bold;text-decoration: none;"
                             href="http://localhost/swallabLa/swallab/public/restaurant/detail">找餐廳</a>
                     </div>
                     <div class="nav-item col-6">
-                        <a id="resta" class="nav-link d-block nav_mainbtn"
+                        <a id="resta" class="nav-link d-block nav_mainbtn" style="color:#8B4513;font-weight: bold;text-decoration: none;"
                             href="http://localhost/swallab/Swallab/foodNotes/foodNotes.html">看食記</a>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                     </div>
                 </form>
                 <!-- 登入及註冊按鈕 -->
-                <div class="ms-3 me-5 col-1" style="color:blue">
+                <div class="ms-3 me-5 col-1" style="color:#8B4513;font-weight: bold;">
                     David
                 </div>
             </div>
