--- a/Swallab/foodNotes/demoHotpot.html
+++ b/Swallab/foodNotes/demoHotpot.html
@@ -37,11 +37,11 @@
             <div class="collapse navbar-collapse col-10" id="navbarSupportedContent">
                 <div class="nav ms-0 me-3 row">
                     <div class="nav-item col-6">
-                        <a id="rest" class="nav-link d-block nav_mainbtn"
+                        <a id="rest" class="nav-link d-block nav_mainbtn" style="color:#8B4513;font-weight: bold;text-decoration: none;"
                             href="http://localhost/swallabLa/swallab/public/restaurant/detail">找餐廳</a>
                     </div>
                     <div class="nav-item col-6">
-                        <a id="resta" class="nav-link d-block nav_mainbtn"
+                        <a id="resta" class="nav-link d-block nav_mainbtn" style="color:#8B4513;font-weight: bold;text-decoration: none;"
                             href="http://localhost/swallab/Swallab/foodNotes/foodNotes.html">看食記</a>
                     </div>
                 </div>
@@ -94,12 +94,12 @@
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 50%;">
-                                <img class="icon" src="../images/other/confetti.png"
+                                <img class="icon" src="../images/other//confetti.png"
                                     alt="">慶生
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 70%;">
-                                <img class="icon" src="../images/other/handshake.png"
+                                <img class="icon" src="../images/other//handshake.png"
                                     alt="">商務
                             </button>
                             <button class="position-absolute translate-middle rounded-pill filter_btn"
@@ -108,12 +108,12 @@
                                     alt="">無障礙
                             </button>
                         </div>
-                        <input type="image" src="../images/other/loupe.png" class="icon mt-2 ms-0"
+                        <input type="image" src="../images/other//loupe.png" class="icon mt-2 ms-0"
                             onclick="document.search.submit()">
                     </div>
                 </form>
                 <!-- 登入及註冊按鈕 -->
-                <div class="ms-3 me-5 col-1" style="color:blue">
+                <div class="ms-3 me-5 col-1" style="color:#8B4513;font-weight: bold;">
                     David
                 </div>
             </div>
