--- a/Swallab/nav/nav.html
+++ b/Swallab/nav/nav.html
@@ -29,10 +29,10 @@
                     <div class="nav-item col-6">
                         <!-- 首頁沒有 active -->
                         <!-- <a class="nav-link active" aria-current="page" href="#">Active</a> -->
-                        <a class="nav-link d-block nav_mainbtn" href="../restaurant/detail.html">找餐廳</a>
+                        <a class="nav-link d-block nav_mainbtn"  style="color:#8B4513;font-weight: bold;text-decoration: none;"href="../restaurant/detail.html">找餐廳</a>
                     </div>
                     <div class="nav-item col-6">
-                        <a class="nav-link d-block nav_mainbtn" href="../foodNotes/foodNotes.html">看食記</a>
+                        <a class="nav-link d-block nav_mainbtn"  style="color:#8B4513;font-weight: bold;text-decoration: none;"href="../foodNotes/foodNotes.html">看食記</a>
                     </div>
                 </div>
                 <!-- Input 都在這 -->
