--- a/Swallab/foodNotes/demoHotpot.html
+++ b/Swallab/foodNotes/demoHotpot.html
@@ -149,10 +149,11 @@
 
             <!-- 右邊文章 -->
             <div class="col-9  p-3" >
-                <h3>【台中】青花驕麻辣鍋(崇德店)王品集團麻辣鍋、酸菜白肉鍋火鍋餐廳 牛三拼盛宴比臉大氣勢十足</h3>
-                <div class="mt-5" >發布時間：<span>2024-05-20 20:38</span></div>
+                <!-- <h3>【台中】青花驕麻辣鍋(崇德店)王品集團麻辣鍋、酸菜白肉鍋火鍋餐廳 牛三拼盛宴比臉大氣勢十足</h3> -->
+                <h3 id="title"></h3>
+                <div class="mt-5" >發布時間：<span id="createTime"</span></div>
                 <div class="d-flex justify-content-between align-items-center">
-                    <div>用餐時間：<span>2024-04-30 12:30</span></div>
+                    <div>用餐時間：<span id="dinningTime"></span></div>
                     <!-- 下面這個<div>不可以刪掉 -->
                     <div>
                         <i class="fa-regular fa-heart noColorHeart"></i>
@@ -162,8 +163,11 @@
                     </div>
                 </div>
                 <!-- 內文 -->
-                <article class="mt-4 bigArticle" >
-                    <p class="mb-5" >
+                <article class="mt-4 ">
+                    <article  class="bigArticle"id="bigArticle">
+
+                    </article>
+                    <!-- <p class="mb-5" >
                         青花驕麻辣鍋是王品集團推出的麻辣鍋品牌餐廳，麻辣湯頭加入重慶的九葉青花椒熬煮，鮮麻香醇，非常吸引我。想不到幫同事的慶生聚餐，壽星就選定青花驕麻辣鍋崇德店，當餐廳人選丟出來的時候，我完全是舉雙手雙腳同意的啊🙋‍♀️預訂好日期後，大家一起騎車前往青花驕麻辣鍋報到！
                     </p>
                     <p class="mb-3" >
@@ -193,15 +197,15 @@
                     <p class="mb-3" >
                         ▼甜點冰糖銀耳，裡頭除了細細的銀耳還有枸杞，冰甜好喝，只有一小杯不夠啊~
                     </p>
-                    <img src="../images/foodnotes_demo/qhj_dessert.jpg" alt="" class="mb-5"/>
+                    <img src="../images/foodnotes_demo/qhj_dessert.jpg" alt="" class="mb-5"/> -->
                 
-                    <article>
+                    <!-- <article>
                         <h5>青花驕麻辣鍋 台中崇德店</h5>
                         <p>均消：<span>600</span>~<span>900</span>元</p>
                         <p>電話：<span>04-2422-3286</span></p>
                         <p>地址：<span>台中市北屯區崇德路三段189號</span></p>
                         <p>營業時間：<span>11:00</span>~<span>1:00</span></p>
-                    </article>
+                    </article> -->
                 </article>
             </div>
 
