--- a/Swallab/login/writeBlogPost.html
+++ b/Swallab/login/writeBlogPost.html
@@ -156,7 +156,7 @@
                 </a>
             </div>
             <div class="col">
-                <h4>撰寫食記</h4>
+                <h4>發布食記</h4>
                 <form id="myBlog">
                     <div class="formCon">
                         <label for="title">標&emsp;&emsp;題 : &emsp;&emsp;</label>
