--- a/Swallab_0812/public/Swallab/nav/search_results.html
+++ b/Swallab_0812/public/Swallab/nav/search_results.html
@@ -82,9 +82,9 @@
                             <!-- <input class="form-control m-0" type="search" placeholder="Click" aria-label="Search"> -->
                             <div style="display: flex;" clas="row">
                                 <div class="col-6">
-                                    <input type="text" id="myInput" onclick="myFunction()" placeholder="點擊我"
-                                        class="form-control m-0">
-                                    <!-- from 資料庫 -->
+                                    <input type="text" id="myInput" onclick="myFunction()" placeholder="想找什麼餐廳？"
+                                        class="form-control m-0" autocomplete="off">
+                                    <!-- 寫死 -->
                                     <div id="myDropdown" class="dropdown-content"
                                         style="display: none; position: absolute;">
                                         <a href="#cate_no" onclick="fillInput('null')"
@@ -100,22 +100,14 @@
                                     </div>
                                 </div>
                                 <div class="col-6">
-
-                                    <input type="text" id="myInput2" onclick="myFunction2()" placeholder="點擊我"
-                                        class="form-control m-0 col-6">
+                                    <input type="text" id="myInput2" onclick="myFunction2()" placeholder="點擊或輸入地區"
+                                        autocomplete="off" class="form-control m-0 col-6">
                                     <!-- from 資料庫 -->
                                     <div id="myDropdown2" class="dropdown-content"
-                                        style="display: none; position: absolute;">
-                                        <a href="#loc_no" onclick="fillInput2('null')"
-                                            class="position-relative">不挑地區</a>
-                                        <a href="#loc_Taichung" onclick="fillInput2('台中市')"
-                                            class="position-relative">台中市</a>
-                                        <a href="#loc_1" onclick="fillInput2('選項2')" class="position-relative">選項2</a>
-                                        <a href="#loc_2" onclick="fillInput2('選項3')" class="position-relative">選項3</a>
+                                        style="display: block; position: absolute;">
                                     </div>
                                 </div>
                             </div>
-
 
 
                             <!-- 搜尋框 end -->
@@ -123,7 +115,8 @@
                                 style="margin-left: 10%;">
                                 <img class="icon" src="../images/nav_icon/dating.png" alt="">約會
                             </button>
-                            <button data-purpose="聚餐" class="position-absolute translate-middle rounded-pill filter_btn"
+                            <button data-purpose="聚餐"
+                                class="purpose-btn position-absolute translate-middle rounded-pill filter_btn"
                                 style="margin-left: 30%;">
                                 <img class="icon" src="../images/nav_icon/group.png" alt="">聚餐
                             </button>
@@ -173,7 +166,7 @@
 
 
     <script>
-        // 頁面互動（nav.js)
+        // 頁面互動 Start（nav.js)
         // 當滑鼠經過時，顯示兩個 icon
         document.getElementById('theicon').addEventListener('mouseover', function () {
             console.log(123);
@@ -227,63 +220,72 @@
 
         function myFunction2() {
             var dropdown = document.getElementById("myDropdown2");
-            if (dropdown.style.display === "none") {
+            if (dropdown.style.display === "none" || dropdown.style.display === "") {
                 dropdown.style.display = "block";
-            } else {
-                dropdown.style.display = "none";
-            }
-        }
-        // 搜尋框顯示
-        function fillInput(value) {
-            document.getElementById('myInput').value = value;
-            document.getElementById('myDropdown').style.display = "none";
-            document.getElementById('myInput2').style.display = "block";
-        }
-
-        function fillInput2(value) {
-            document.getElementById('myInput2').value = value;
-            document.getElementById('myDropdown2').style.display = "none";
-            document.getElementById('myInput1').style.display = "block";
-
-            // SQL
-            // 'myInput' 和 'myInput2' 的值作為查詢條件
-        }
-        // 點擊其他地方隱藏下拉
-
-        // 搜尋框
-        // 點擊輸入框，切換下拉選單的顯示和隱藏
-        function myFunction() {
-            var dropdown = document.getElementById("myDropdown");
-            if (dropdown.style.display === "none") {
-                dropdown.style.display = "block";
+                populateDropdown();
             } else {
                 dropdown.style.display = "none";
             }
         }
 
-        function myFunction2() {
+        function populateDropdown() {
             var dropdown = document.getElementById("myDropdown2");
-            if (dropdown.style.display === "none") {
-                dropdown.style.display = "block";
-            } else {
-                dropdown.style.display = "none";
-            }
+            dropdown.innerHTML = '';
+            var allOption = document.createElement('a');
+            allOption.href = "#";
+            allOption.onclick = function (e) {
+                e.preventDefault();
+                fillInput2('全台中市');
+            };
+            allOption.textContent = '全台中市';
+            dropdown.appendChild(allOption);
+            // 從資料庫撈
+            fetch('http://localhost:8000/api/filtlocations')
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                    data.forEach(location => {
+                        var option = document.createElement('a');
+                        option.href = "#";
+                        option.onclick = function (e) {
+                            e.preventDefault();
+                            fillInput2(location.location);
+                        };
+                        option.textContent = location.location;
+                        dropdown.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching locations:', error));
         }
+
+
         // 搜尋框顯示
+        // FiltClasses
         function fillInput(value) {
-            document.getElementById('myInput').value = value;
+            if (value === '不設分類') {
+                document.getElementById('myInput').value = '不設分類';
+                document.getElementById('myInput').dataset.value = '';
+            } else {
+                document.getElementById('myInput').value = value;
+                document.getElementById('myInput').dataset.value = value;
+            }
             document.getElementById('myDropdown').style.display = "none";
-            document.getElementById('myInput2').style.display = "block";
+            checkAndTriggerSearch();
         }
-
+        // FiltLocations
         function fillInput2(value) {
-            document.getElementById('myInput2').value = value;
+            if (value === '全台中市') {
+                document.getElementById('myInput2').value = '全台中市';
+                document.getElementById('myInput2').dataset.value = '';
+            } else {
+                document.getElementById('myInput2').value = value;
+                document.getElementById('myInput2').dataset.value = value;
+            }
             document.getElementById('myDropdown2').style.display = "none";
-            document.getElementById('myInput').style.display = "block";
-
-            // SQL
-            // 'myInput' 和 'myInput2' 的值作為查詢條件
+            checkAndTriggerSearch();
         }
+
+
         // 點擊其他地方隱藏下拉
         window.onclick = function (event) {
             if (!event.target.matches('#myInput')) {
@@ -305,6 +307,7 @@
         if (searchCount != 0) stop()
 
         const searchForm = document.querySelector('form[name="search"]');
+        // const check = document.getAttribute('input[myFilter]');
         const searchTypeIcon = document.getElementById('showicon');
         const categoryInput = document.getElementById('myInput');
         const locationInput = document.getElementById('myInput2');
@@ -312,6 +315,12 @@
         const searchButton = document.querySelector('button[type="submit"]');
         const resultsContainer = document.getElementById('searchResults');
         const pastParamContainer = document.getElementById('pastParam');
+        const searchParams = new URLSearchParams();
+        searchParams.append('search_type', searchType);
+        if (category) searchParams.append('category', category);
+        if (location) searchParams.append('location', location);
+        if (selectedPurpose) searchParams.append('purpose', selectedPurpose);
+
         const MAX_SEARCHES = 999;
         searchCount = 0;
         console.log(`DOM#${searchCount}`); // 0
@@ -336,8 +345,8 @@
             console.log(`執行搜索 #${searchCount}`);
 
             const searchType = getSearchType();
-            const category = categoryInput.value;
-            const location = locationInput.value;
+            const category = document.getElementById('myInput').dataset.value;
+            const location = document.getElementById('myInput2').dataset.value;
             const purpose = purposeInput.getAttribute('data-purpose');
 
             const searchParams = new URLSearchParams();
@@ -345,6 +354,8 @@
             if (category) searchParams.append('category', category);
             if (location) searchParams.append('location', location);
             if (purpose) searchParams.append('purpose', purpose);
+            if (selectedPurpose) searchParams.append('purpose', selectedPurpose);
+
 
             console.log(`b4 show URL#${searchCount}`);
             searchCount++;
@@ -383,6 +394,30 @@
             searchCount++;
             // if (searchCount > 1) return;
         }
+
+        // 二個都有值就 submit
+        function checkAndTriggerSearch() {
+            const input1 = document.getElementById('myInput').value;
+            const input2 = document.getElementById('myInput2').value;
+            if (input1 && input2) {
+                performSearch();
+            }
+        }
+        categoryInput.addEventListener('change', function () {
+            const input1 = document.getElementById('myInput').value;
+            const input2 = document.getElementById('myInput2').value;
+            if (input1 && input2) {
+                performSearch();
+            }
+        });
+        locationInput.addEventListener('change', function () {
+            const input1 = document.getElementById('myInput').value;
+            const input2 = document.getElementById('myInput2').value;
+            if (input1 && input2) {
+                performSearch();
+            }
+        });
+
 
         console.log(`after performSearch()#${searchCount}`); // 0
         searchCount++;
@@ -443,6 +478,7 @@
             // debugger; //No.3, After Submit, everything shows up, then reload...
         }
         // debugger; //No.1
+
 
 
         searchForm.addEventListener('submit', function (e) {
