--- a/Swallab/restaurant/detail.html
+++ b/Swallab/restaurant/detail.html
@@ -204,28 +204,28 @@
             <div class="row ">
                 <!-- 側邊欄 -->
                 <div class="col-2 custom-ul sticky-top">
-                    <div class="mb-2 mt-3" onclick="allMenu('青花驕-公益店')">
+                    <div class="mb-2 mt-3" onclick="allMenu('青花驕')">
                         <img src="./../images/other/hot_2.png" style="width: 150px;" alt="">
                         <li>全部餐點</li>
                     </div>
-                    <div class="" onclick="saleMenu('青花驕-公益店')">
+                    <div class="" onclick="saleMenu('青花驕')">
                         <img src="./../images/other/limited_time_offer.png " style="width: 100px;" alt="" onclick="">
                         <li>限時優惠</li>
                     </div>
-                    <div class="mt-2" onclick="menu('單點 蔬菜類','青花驕-公益店')">
+                    <div class="mt-2" onclick="menu('單點 蔬菜類','青花驕')">
                         <img src="./../images/other/vegetable_6.jpeg" style="width: 100px;" alt="">
                         <li>蔬菜</li>
                     </div>
-                    <div class="mt-2" onclick="menu('單點 餃類','青花驕-公益店')">
+                    <div class="mt-2" onclick="menu('單點 餃類','青花驕')">
                         <img src="./../images/other/dumpling.png"
                             style="width: 100px; border: none ;background-color: transparent;" alt="">
                         <li>餃類</li>
                     </div>
-                    <div class="mt-2" onclick="menu('單點 丸子類','青花驕-公益店')">
+                    <div class="mt-2" onclick="menu('單點 丸子類','青花驕')">
                         <img src="./../images/other/porkball_1.jpg " style="width: 100px;" alt="">
                         <li>丸子</li>
                     </div>
-                    <div class="mt-2 mb-5" onclick="menu('主食','青花驕-公益店')">
+                    <div class="mt-2 mb-5" onclick="menu('單點 主食','青花驕')">
                         <img src="./../images/other/rice.png " style="width: 80px;" alt="">
                         <li>主食</li>
                     </div>
