--- a/Swallab_0812/public/Swallab/headpage/headpage.html
+++ b/Swallab_0812/public/Swallab/headpage/headpage.html
@@ -270,15 +270,16 @@
     <main>
         <div class="w-100 container-fluid" style="flex:1">
             <!-- 品牌介紹 -->
-            <div class="bg-primary row align-self-center">
-                <div class="fs-1 fw-bold text-center my-4">Swallab</div>
-                <article class="bg-danger text-center">
-                    <span>
+            <div class="row align-self-center">
+                <div class="myTitle">Swallab</div>
+                <article>
+                    <br>
                         吃，除了吃飽，可以吃好，還可以吃得巧妙<br>
                         吃可以是日常生活的一個小實驗<br>
                         實驗你與餐廳的匠心<br>
                         實驗你與其他人的默契<br>
                         實驗你自己的餐飲慣習<br>
+                        讓我們一起探索喜歡的餐廳</br>和
                     </span>
                 </article>
             </div>
