--- a/Swallab/foodNotes/demoHotpot.html
+++ b/Swallab/foodNotes/demoHotpot.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand sticky-top shadow">
         <div class="container">
             <!-- LOGO -->
-            <a class="navbar-brand ms-5 col-1" href="http://localhost/swallabLa/swallab/public/headpage/headpage">
+            <a class="navbar-brand ms-5 col-1" href="http://localhost/swallab/swallab/headpage/headpage.html">
                 <img src="../images/other/logo.jpg" alt=""
                     class="logo d-inline-block align-text-top">
             </a>
@@ -38,7 +38,7 @@
                 <div class="nav ms-0 me-3 row">
                     <div class="nav-item col-6">
                         <a id="rest" class="nav-link d-block nav_mainbtn" style="color:#8B4513;font-weight: bold;text-decoration: none;"
-                            href="http://localhost/swallabLa/swallab/public/restaurant/detail">找餐廳</a>
+                            href="http://localhost/swallab/swallab/restaurant/detail.html">找餐廳</a>
                     </div>
                     <div class="nav-item col-6">
                         <a id="resta" class="nav-link d-block nav_mainbtn" style="color:#8B4513;font-weight: bold;text-decoration: none;"
