--- a/Swallab/foodNotes/foodNotes.html
+++ b/Swallab/foodNotes/foodNotes.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand sticky-top shadow">
         <div class="container">
             <!-- LOGO -->
-            <a class="navbar-brand ms-5 col-1" href="http://localhost/swallabLa/swallab/public/headpage/headpage">
+            <a class="navbar-brand ms-5 col-1" href="http://localhost/swallab/swallab/headpage/headpage.html">
                 <img src="../images/other/logo.jpg" alt=""
                     class="logo d-inline-block align-text-top">
             </a>
@@ -27,7 +27,7 @@
                 <div class="nav ms-0 me-3 row">
                     <div class="nav-item col-6">
                         <a id="rest" class="nav-link d-block nav_mainbtn" style="color:#8B4513;font-weight: bold;text-decoration: none;"
-                            href="http://localhost/swallabLa/swallab/public/restaurant/detail">找餐廳</a>
+                            href="http://localhost/swallab/swallab/restaurant/detail.html">找餐廳</a>
                     </div>
                     <div class="nav-item col-6">
                         <a id="resta" class="nav-link d-block nav_mainbtn" style="color:#8B4513;font-weight: bold;text-decoration: none;"
@@ -235,7 +235,7 @@
 
                 
     <!-- 新增食記按鈕 -->
-    <a href="https://www.google.com.tw/"><img src="../images/other/write.png" alt="" width="40" id="write"/></a>
+    <!-- <a href="https://www.google.com.tw/"><img src="../images/other/write.png" alt="" width="40" id="write"/></a> -->
     
     <!-- TOP按鈕 -->
     <img src="../images/other/top.png" alt="" class="top" id="top"/>
