新增首頁照片

--- a/Swallab/headpage/headpage.html
+++ b/Swallab/headpage/headpage.html
@@ -161,7 +161,7 @@
                 <div class="col-5 d-flex flex-column justify-content-center mt-3" style="overflow: hidden;">
                     <div id="mainImageRest">
                         <button href="" class="">
-                            <img src="../images/headpage_mainphoto/main_rest.jpeg" alt="">
+                            <img src="../images/other/main_rest.jpg" alt="">
                         </button>
                     </div>
                     <div class="row justify-content-center" id="btnRest">
@@ -170,12 +170,12 @@
                 </div>
                 <div class="col-5 d-flex flex-column justify-content-center mt-3" style="overflow: hidden;">
                     <div id="mainImageNotes">
-                        <button href="#" class="">
-                            <img src="../images/headpage_mainphoto/main_notes.jpeg" alt="">
-                        </button>
+                        <a href="../foodNotes/foodNotes.html" class="">
+                            <img src="../images/other/main_notes.jpg" alt="">
+                        </a>
                     </div>
                     <div class="row justify-content-center" id="btnNotes">
-                        <a href="#" class="btn btn-outline-danger text-center mt-3 w-50">看食記</a>
+                        <a href="../foodNotes/foodNotes.html" class="btn btn-outline-danger text-center mt-3 w-50">看食記</a>
                     </div>
                 </div>
             </div>
