--- a/Swallab/restaurant/restaurant.html
+++ b/Swallab/restaurant/restaurant.html
@@ -117,10 +117,8 @@
                     </div>
                 </form>
                 <!-- 登入及註冊按鈕 -->
-                <div class="ms-auto me-5">
-                    <a href="#" class="container">
-                        <button class="btn btn-outline-success btn-sm text-nowrap">登入/註冊</button>
-                    </a>
+                <div class="ms-3 me-5 col-1" style="color:blue">
+                    David
                 </div>
             </div>
         </div>
